package com.backend;

public enum FriendRequestStatus {
    PENDING,
    ACCEPTED,
    REJECTED
}
